# stratagem

./: CHANGELOG.md  Eval.hs  LispVal.hs  Parser.hs  Prim.hs  README.md  Repl.hs  package.yaml  stack.yaml  stratagem.cabal
exec/: Main.hs
lib/: stdlib.scm
src/: Cli.hs  Eval.hs  LispVal.hs  Parser.hs  Prim.hs  Repl.hs
test/: eval_bool_ops.scm  stdlib_mod.scm  test_args.scm  test_cadadr.scm  test_car.scm  test_cdr.scm  test_eval_args.scm  test_scope1.scm
test-hs/Spec/: Main.hs
